objects/datamask__Object_Metadata__mdt.object
<CustomObject>
    <fields>
        <fullName>datamask__API_Name__c</fullName>
        <label>API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Feed_History_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed History Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Field_History_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field History Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Masking_Object__c</fullName>
        <label>Masking Object</label>
        <referenceTo>datamask__Masking_Object__mdt</referenceTo>
        <relationshipLabel>Object Metadata</relationshipLabel>
        <relationshipName>Object_Metadata</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>datamask__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Version_Number__c</fullName>
        <description>Used for process deactivation/reactivation</description>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object Metadata</label>
    <pluralLabel>Object Metadata</pluralLabel>
</CustomObject>